2015-03-04  Werner Lemberg  <wl@gnu.org>

	* src/ftlint.c: Various minor compiler warning fixes.

2015-03-04  Werner Lemberg  <wl@gnu.org>

	* src/ftdump.c: Various minor compiler warning fixes.

2015-03-04  Werner Lemberg  <wl@gnu.org>

	[ftbench] Various compiler warning fixes.

	* src/ftbench.c: Decorate global variables/functions with `static'.
	Signedness fixes.
	(main): Protect various command line arguments against invalid
	values.

2015-03-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Add support for MM (and GX) fonts.

	F2 selects the axis, F3 and F4 change the axis value.

	The new code is adapted from `ftmulti.c'.

	* src/ftgrid.c: Include FT_MULTIPLE_MASTERS_H.
	(GridStatusRec): Add `mm', `design_pos', and `current_axis' fields.
	(grid_status_init): Initialize new fields.
	(event_help): Updated.
	(event_axis_change): New function.
	(event_font_change): Handle MM data.
	(Process_Event): Handle new keys.
	(write_header, main): Updated.

2015-03-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Less verbose header line.

	* src/ftgrid.c (BUFSIZE): New macro.
	(GridStatusRec, event_help): Use it.
	(write_header): Use it.
	Emit more compact header line.

2015-03-03  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (main): Always display 1/100ths for axis values.

2015-03-03  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Use F1-F8 keys to handle four axes.

	Previously, we used F1 for help and F3-F8 for three axes.

	* src/ftmulti.c (Process_Event): Implement.
	(Help): Updated.

2015-03-03  Werner Lemberg  <wl@gnu.org>

	Recommend `?' instead of `F1' for help.

	Usually, both `F1' and `?' map to the help screen.  However, not all
	display managers provide the F1 key to the application.

	* src/ftdiff.c (main), src/ftgrid.c (main), src/ftmulti.c (main),
	src/ftstring.c (main), src/ftview.c (main): Apply.

2014-12-30  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.5 released.
	=========================


	Tag sources with `VER-2-5-5'.

	* README: Updated.
	* src/*.1: Updated.
